force-app/main/default/objects/Grant_Application__c/Grant_Application__c.object-meta.xml
<CustomObject>
    <description>Stores grant applications submitted by nonprofit organizations</description>
    <label>Grant Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>