force-app/main/default/objects/Grant_Application__c/fields/Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_Requested__c</fullName>
    <description>Grant amount requested</description>
    <inlineHelpText>Grant amount requested ($100 - $50,000)</inlineHelpText>
    <label>Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>