force-app/main/default/objects/Grant_Application__c/fields/Annual_Budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_Budget__c</fullName>
    <description>Total annual operating budget</description>
    <inlineHelpText>Total annual operating budget</inlineHelpText>
    <label>Annual Operating Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>