force-app/main/default/objects/Grant_Application__c/fields/Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Award_Amount__c</fullName>
    <description>Auto-calculated award amount on approval</description>
    <inlineHelpText>Grant award amount (calculated on approval)</inlineHelpText>
    <label>Award Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>