force-app/main/default/objects/Grant_Application__c/fields/Award_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Award_Breakdown__c</fullName>
    <description>JSON string of scoring factors</description>
    <inlineHelpText>Detailed award calculation breakdown (JSON)</inlineHelpText>
    <label>Award Breakdown</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>