force-app/main/default/objects/Grant_Application__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Correspondence email</description>
    <inlineHelpText>Correspondence email</inlineHelpText>
    <label>Primary Contact Email</label>
    <type>Email</type>
</CustomField>