force-app/main/default/objects/Grant_Application__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Primary contact first and last name</description>
    <inlineHelpText>Primary contact first and last name</inlineHelpText>
    <label>Primary Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>