force-app/main/default/objects/Grant_Application__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Contact phone number</description>
    <inlineHelpText>Contact phone number</inlineHelpText>
    <label>Primary Contact Phone</label>
    <type>Phone</type>
</CustomField>