force-app/main/default/objects/Grant_Application__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <description>Primary contact's job title</description>
    <label>Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>