force-app/main/default/objects/Grant_Application__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <description>IRS Employer Identification Number</description>
    <inlineHelpText>IRS Employer Identification Number (format: XX-XXXXXXX)</inlineHelpText>
    <label>EIN (Tax ID)</label>
    <length>12</length>
    <type>Text</type>
</CustomField>