force-app/main/default/objects/Grant_Application__c/fields/Eligibility_Results__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Results__c</fullName>
    <description>JSON string of rule-by-rule results</description>
    <inlineHelpText>Detailed eligibility check results (JSON)</inlineHelpText>
    <label>Eligibility Results</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>