force-app/main/default/objects/Grant_Application__c/fields/Eligibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Score__c</fullName>
    <description>How many of 6 rules passed</description>
    <inlineHelpText>Number of eligibility rules passed (0-6)</inlineHelpText>
    <label>Eligibility Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>