force-app/main/default/objects/Grant_Application__c/fields/Is_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All 6 rules passed?</description>
    <inlineHelpText>Did the application pass all 6 eligibility rules?</inlineHelpText>
    <label>Is Eligible</label>
    <type>Checkbox</type>
</CustomField>