force-app/main/default/objects/Grant_Application__c/fields/Mission_Statement__c.field-meta.xml
<CustomField>
    <fullName>Mission_Statement__c</fullName>
    <description>Organization's mission</description>
    <inlineHelpText>Organization's mission (20-500 characters)</inlineHelpText>
    <label>Mission Statement</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>