force-app/main/default/objects/Grant_Application__c/fields/Num_Beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>Num_Beneficiaries__c</fullName>
    <description>Number of direct beneficiaries</description>
    <inlineHelpText>Estimated number of direct beneficiaries</inlineHelpText>
    <label>Estimated Beneficiaries</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>