force-app/main/default/objects/Grant_Application__c/fields/Num_Employees__c.field-meta.xml
<CustomField>
    <fullName>Num_Employees__c</fullName>
    <description>Full-time staff count</description>
    <inlineHelpText>Full-time staff count</inlineHelpText>
    <label>Number of Full-Time Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>