force-app/main/default/objects/Grant_Application__c/fields/Organization_Address__c.field-meta.xml
<CustomField>
    <fullName>Organization_Address__c</fullName>
    <description>Physical address</description>
    <inlineHelpText>Physical address</inlineHelpText>
    <label>Organization Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>