force-app/main/default/objects/Grant_Application__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <description>Legal name of the organization</description>
    <inlineHelpText>Legal name of the organization</inlineHelpText>
    <label>Organization Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>