force-app/main/default/objects/Grant_Application__c/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <description>Organization classification</description>
    <inlineHelpText>Organization classification</inlineHelpText>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>501(c)(3)</fullName>
            </value>
            <value>
                <fullName>501(c)(4)</fullName>
            </value>
            <value>
                <fullName>Community-Based Organization</fullName>
            </value>
            <value>
                <fullName>Faith-Based Organization</fullName>
            </value>
            <value>
                <fullName>For-Profit Business</fullName>
            </value>
            <value>
                <fullName>Government Agency</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>