force-app/main/default/objects/Grant_Application__c/fields/Previously_Funded__c.field-meta.xml
<CustomField>
    <fullName>Previously_Funded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has org received Maplewood grant before?</description>
    <inlineHelpText>Has your organization received a Maplewood County grant before?</inlineHelpText>
    <label>Previously Funded</label>
    <type>Checkbox</type>
</CustomField>