force-app/main/default/objects/Grant_Application__c/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Category__c</fullName>
    <description>Best-fit category</description>
    <inlineHelpText>Best-fit category for your project</inlineHelpText>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Youth Programs</fullName>
            </value>
            <value>
                <fullName>Senior Services</fullName>
            </value>
            <value>
                <fullName>Public Health</fullName>
            </value>
            <value>
                <fullName>Neighborhood Safety</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Workforce Development</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>