force-app/main/default/objects/Grant_Application__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <description>Goals, activities, expected outcomes</description>
    <inlineHelpText>Describe your project goals, activities, and expected outcomes (50-2000 characters)</inlineHelpText>
    <label>Project Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>