force-app/main/default/objects/Grant_Application__c/fields/Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_End_Date__c</fullName>
    <description>Project end date</description>
    <inlineHelpText>Project end date (must be after start date, within 24 months)</inlineHelpText>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>