force-app/main/default/objects/Grant_Application__c/fields/Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_Date__c</fullName>
    <description>Project start date</description>
    <inlineHelpText>Project start date (must be at least 30 days in future)</inlineHelpText>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>