force-app/main/default/objects/Grant_Application__c/fields/Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Project_Title__c</fullName>
    <description>Descriptive project title</description>
    <inlineHelpText>Descriptive project title</inlineHelpText>
    <label>Project Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>