force-app/main/default/objects/Grant_Application__c/fields/Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Review_Score__c</fullName>
    <description>Numeric score assigned during review</description>
    <label>Review Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>