force-app/main/default/objects/Grant_Application__c/fields/Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Date__c</fullName>
    <description>When the review action was taken</description>
    <inlineHelpText>Date and time of the review decision</inlineHelpText>
    <label>Reviewed Date</label>
    <type>DateTime</type>
</CustomField>