force-app/main/default/objects/Grant_Application__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The reviewer who took action</description>
    <inlineHelpText>The staff member who reviewed this application</inlineHelpText>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewed_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>