force-app/main/default/objects/Grant_Application__c/fields/Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Comments__c</fullName>
    <description>Comments from reviewer</description>
    <inlineHelpText>Reviewer comments (required for rejection)</inlineHelpText>
    <label>Reviewer Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>