force-app/main/default/objects/Grant_Application__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Date the application was submitted</description>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>