force-app/main/default/objects/Grant_Application__c/fields/Target_Population__c.field-meta.xml
<CustomField>
    <fullName>Target_Population__c</fullName>
    <description>Who benefits from this project</description>
    <inlineHelpText>Who benefits from this project?</inlineHelpText>
    <label>Target Population Served</label>
    <length>255</length>
    <type>Text</type>
</CustomField>