force-app/main/default/objects/Grant_Application__c/fields/Total_Project_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Cost__c</fullName>
    <description>Total project cost</description>
    <inlineHelpText>Total cost of the project</inlineHelpText>
    <label>Total Project Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>