force-app/main/default/objects/Grant_Application__c/fields/Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>Year_Founded__c</fullName>
    <description>Year the organization was established</description>
    <inlineHelpText>Year the organization was established</inlineHelpText>
    <label>Year Founded</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>