force-app/main/default/objects/Grant_Application__c/validationRules/Amount_Requested_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Requested_Range</fullName>
    <active>true</active>
    <description>Amount Requested must be between $100 and $50,000</description>
    <errorConditionFormula>OR(
    Amount_Requested__c &lt; 100,
    Amount_Requested__c &gt; 50000
)</errorConditionFormula>
    <errorDisplayField>Amount_Requested__c</errorDisplayField>
    <errorMessage>Amount Requested must be between $100 and $50,000</errorMessage>
</ValidationRule>