force-app/main/default/objects/Grant_Application__c/validationRules/Beneficiaries_Minimum.validationRule-meta.xml
<ValidationRule>
    <fullName>Beneficiaries_Minimum</fullName>
    <active>true</active>
    <description>Estimated Beneficiaries must be at least 1</description>
    <errorConditionFormula>Num_Beneficiaries__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Num_Beneficiaries__c</errorDisplayField>
    <errorMessage>Estimated Beneficiaries must be at least 1</errorMessage>
</ValidationRule>