force-app/main/default/objects/Grant_Application__c/validationRules/Project_End_Date_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_End_Date_Valid</fullName>
    <active>true</active>
    <description>Project End Date must be after Start Date and within 24 months</description>
    <errorConditionFormula>OR(
    Project_End_Date__c &lt;= Project_Start_Date__c,
    Project_End_Date__c &gt; (Project_Start_Date__c + 730)
)</errorConditionFormula>
    <errorDisplayField>Project_End_Date__c</errorDisplayField>
    <errorMessage>Project End Date must be after Start Date and within 24 months of Start Date</errorMessage>
</ValidationRule>