force-app/main/default/objects/Grant_Application__c/validationRules/Project_Start_Date_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Start_Date_Future</fullName>
    <active>true</active>
    <description>Project Start Date must be at least 30 days in the future</description>
    <errorConditionFormula>Project_Start_Date__c &lt; TODAY() + 30</errorConditionFormula>
    <errorDisplayField>Project_Start_Date__c</errorDisplayField>
    <errorMessage>Project Start Date must be at least 30 days in the future</errorMessage>
</ValidationRule>