force-app/main/default/objects/Grant_Application__c/validationRules/Year_Founded_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_Founded_Valid</fullName>
    <active>true</active>
    <description>Year Founded must be between 1800 and current year</description>
    <errorConditionFormula>OR(
    Year_Founded__c &lt; 1800,
    Year_Founded__c &gt; YEAR(TODAY())
)</errorConditionFormula>
    <errorDisplayField>Year_Founded__c</errorDisplayField>
    <errorMessage>Year Founded must be between 1800 and the current year</errorMessage>
</ValidationRule>